--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.8",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.70.0"
+    "semantic-ui-react": "^0.70.0",
+    "js-yaml": ">=3.13.1",
+    "webpack-dev-server": ">=3.1.11",
+    "lodash.template": ">=4.5.0",
+    "mem": ">=4.0.0",
+    "eslint": ">=4.18.2",
+    "braces": ">=2.3.1"
   },
   "scripts": {
     "start": "node server/server.js",
